@@ -34,27 +34,38 @@
 // Related Topics 位运算 数组 回溯 👍 979 👎 0
 
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
+import java.util.*;
 
 //leetcode submit region begin(Prohibit modification and deletion)
 class Solution {
+    List<List<Integer>> result = new ArrayList<>();// 存放符合条件结果的集合
+    LinkedList<Integer> path = new LinkedList<>();// 用来存放符合条件结果
+    boolean[] used;
     public List<List<Integer>> subsetsWithDup(int[] nums) {
+        if (nums.length == 0){
+            result.add(path);
+            return result;
+        }
         Arrays.sort(nums);
-        HashSet<List<Integer>> res = new HashSet<>();
-        dfs(nums, 0, new ArrayList<>(), res);
-        return new ArrayList<>(res);
+        used = new boolean[nums.length];
+        subsetsWithDupHelper(nums, 0);
+        return result;
     }
 
-    private void dfs(int[] nums, int index, ArrayList<Integer> path, HashSet<List<Integer>> res) {
-        res.add(new ArrayList<>(path));
-
-        for (int i = index; i < nums.length; i++) {
+    private void subsetsWithDupHelper(int[] nums, int startIndex){
+        result.add(new ArrayList<>(path));
+        if (startIndex >= nums.length){
+            return;
+        }
+        for (int i = startIndex; i < nums.length; i++){
+            if (i > 0 && nums[i] == nums[i - 1] && !used[i - 1]){
+                continue;
+            }
             path.add(nums[i]);
-            dfs(nums, i + 1, path, res);
-            path.remove(path.size() - 1);
+            used[i] = true;
+            subsetsWithDupHelper(nums, i + 1);
+            path.removeLast();
+            used[i] = false;
         }
     }
 }
